Main comm codes and reference documents

--- a/css/application.css
+++ b/css/application.css
@@ -1519,6 +1519,12 @@ ul.measure_activity_action_list {
     top: -5px;
 }
 
+a.icon span {
+    margin-left: 8px;
+    position: relative;
+    top: -5px;
+}
+
 .json_key {
     width: 40%;
     float: left;
